fixed bugs: marquee size on 2000 version not correct on safari / input not stylizing on 90s version on safari / my-work-card size not correct on safari on 1980 version / contact section not changing in navbar on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,6 +285,10 @@ mark{
 
 /* CONTACT */
 
+#contact{
+    min-height: 90vh;
+}
+
 .contact-card{
     width: 85%
 }
